ollama/Deployment.ollama.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    app.kubernetes.io/version: 0.24.0
    helm.sh/chart: ollama-1.57.0
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ollama
      app.kubernetes.io/name: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ollama
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: ollama
        app.kubernetes.io/version: 0.24.0
        helm.sh/chart: ollama-1.57.0
    spec:
      containers:
        - env:
            - name: OLLAMA_HOST
              value: 0.0.0.0:11434
            - name: NVIDIA_VISIBLE_DEVICES
              value: all
          image: ollama/ollama:0.24.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    while ! /bin/ollama ps > /dev/null 2>&1; do
                      sleep 5
                    done

                    /bin/ollama pull  qwen2.5-coder:14b
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: ollama
          ports:
            - containerPort: 11434
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 4000m
              memory: 8Gi
              nvidia.com/gpu: 1
            requests:
              cpu: 1000m
              memory: 4Gi
          securityContext: {}
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-data
      nodeSelector:
        nvidia.com/gpu.present: "true"
      runtimeClassName: nvidia
      securityContext: {}
      serviceAccountName: ollama
      terminationGracePeriodSeconds: 120
      tolerations:
        - effect: NoSchedule
          key: dedicated
          operator: Equal
          value: ai
      volumes:
        - emptyDir: {}
          name: ollama-data
