ollama/Pod.ollama-test-connection.k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    app.kubernetes.io/version: 0.32.9
    helm.sh/chart: ollama-1.74.0
  name: ollama-test-connection
  namespace: ollama
spec:
  containers:
    - args:
        - |
          wget -qO- "http://ollama:11434" >/dev/null
      command:
        - sh
        - -ec
      image: busybox
      name: wget
  restartPolicy: Never
