ollama/HTTPRoute.ollama.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  hostnames:
    - ollama.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ollama
          port: 11434
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
